css/main.css
html {
box-sizing: border-box;
-moz-text-size-adjust: 100%;
-ms-text-size-adjust: 100%;
-webkit-text-size-adjust: 100%;
text-size-adjust: 100%;

font-family: sans-serif;
}

*, *::before, *::after {
	box-sizing: inherit;
}

ol {
	color: #0074d9;
}

li a {
	text-decoration: none;
	color: #0074d9;
	display: block;
	padding: 0.2em;
}

li a:hover {
	background-color: #0074d9;
	color: #fff;
}

header {
	background-color: #ccc;
}

.probes {
	background-color: #e2e2e2;
}

.discovery, .moons {
	background-color: #efefef;
}

.char, .explore, .second {
	background-color: #e0e0e0;
}

.toplink {
	text-decoration: none;
	color: #0074d9;
}

footer {
	background-color: #ccc;
}

@media only screen and (min-width: 25em) {

.nav li {
	display: inline-block;
}

.nav {
	text-align: center;
}
}


@media only screen and (min-width: 38em) {

.venus {
	text-align: left;
}
}

@media only screen and (min-width: 50em) {

}
}

